Fix application layout

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,5 @@
   %body
     %header
       %h1.name Сева Жидков
-      %p.about Люблю программирование и себя
+      %p.about-small Люблю программирование и себя
     = yield
