Added story about me to home page

--- a/app/views/home_page/home.html.haml
+++ b/app/views/home_page/home.html.haml
@@ -1,1 +1,26 @@
+%main
+  .about
+    %h2 Кто я такой или история Севиного программирования
+    %p
+      Я родился в г. Ижевске, через несколько месяцев переехал в Воткинск
+      (Удмуртская республика), в котором на данный момент проживаю. Хочу
+      когда-нибудь переехать в Сан-Франциско, работать в стартапе.
+    %p
+      Я начал заниматься программированием в 9 лет и сейчас, оглядываясь
+      назад, понимаю, что очень многие вещи делал неправильно.
+    %p
+      Не нужно было скакать по технологиям, а выбрать что-то одно. За несколько
+      лет я попробовал C#, Pascal (Delphi), C/C++, PHP, Java, ObjectiveC и
+      Javascript.
+    %p
+      А потом я нашел Python. "И мое сердце остановилось..." Все было логично и
+      продумано. Как и в Ruby On Rails, который я нашел позднее. И в Swift,
+      который существенно облегчил разработку под iOS.
+    %p
+      Программирование начало приносить мне реальное удовлетворение.
+      Я начал читать книги на английском, смотреть видео с конференций,
+      начал выкладывать свой код и стараться дорабатывать чужой на Github.
+    %p
+      Я счастлив. Я программист.
+
 %p Здесь будет краткое меню сайта
