Create link to contact page in home page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,3 +11,5 @@
       %h1.name Сева Жидков
       %p.about-small Люблю программирование и себя
     = yield
+    %footer
+      = link_to("Связаться со мной", "/home_page/contact")
