Edit text about me in home page

--- a/app/views/home_page/home.html.haml
+++ b/app/views/home_page/home.html.haml
@@ -13,9 +13,9 @@
       лет я попробовал C#, Pascal (Delphi), C/C++, PHP, Java, ObjectiveC и
       Javascript.
     %p
-      А потом я нашел Python. "И мое сердце остановилось..." Все было логично и
-      продумано. Как и в Ruby On Rails, который я нашел позднее. И в Swift,
-      который существенно облегчил разработку под iOS.
+      А потом я нашел Python. Все было логично и продумано. Как и в
+      Ruby On Rails, который я нашел позднее. И в Swift, который существенно
+      облегчил разработку под iOS.
     %p
       Программирование начало приносить мне реальное удовлетворение.
       Я начал читать книги на английском, смотреть видео с конференций,
