--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,4 +13,4 @@
       %p.about-small Люблю программирование и себя
     = yield
     %footer
-      = link_to("Связаться со мной", "/home_page/contact")
+      = link_to("Связаться со мной", contact_path)
