Added link to root in footer

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,4 +13,5 @@
       %p.about-small Люблю программирование и себя
     = yield
     %footer
+      = link_to("Главная", root_path)
       = link_to("Связаться со мной", contact_path)
