Update about in home page

--- a/app/views/home_page/home.html.haml
+++ b/app/views/home_page/home.html.haml
@@ -1,15 +1,13 @@
 %main
   .about
-    %h2 Кто я такой или история Севиного программирования
+    %h2 Кто я такой?
     %p
       Я родился в г. Ижевске, через несколько месяцев переехал в Воткинск
       (Удмуртская республика), в котором на данный момент проживаю. Хочу
       когда-нибудь переехать в Сан-Франциско, работать в стартапе.
     %p
       Я начал заниматься программированием в 9 лет и сейчас, оглядываясь
-      назад, понимаю, что очень многие вещи делал неправильно.
-    %p
-      Не нужно было скакать по технологиям, а выбрать что-то одно. За несколько
+      назад, понимаю, что очень многие вещи делал неправильно. За несколько
       лет я попробовал C#, Pascal (Delphi), C/C++, PHP, Java, ObjectiveC и
       Javascript.
     %p
@@ -21,6 +19,6 @@
       Я начал читать книги на английском, смотреть видео с конференций,
       начал выкладывать свой код и стараться дорабатывать чужой на Github.
     %p
-      Я счастлив. Я программист.
+      Я программист.
 
 %p Здесь будет краткое меню сайта
