Update contacts page

--- a/app/views/home_page/contact.html.haml
+++ b/app/views/home_page/contact.html.haml
@@ -1,1 +1,19 @@
-My contacts
+%h2 Контакты
+%p
+  E-mail:
+  = mail_to("iam@sevazhidkov.com", "iam@sevazhidkov.com", subject: 'Письмо Севе')
+%p
+  Facebook:
+  = link_to("shamoiseva", "https://www.facebook.com/shamoiseva")
+%p
+  Twitter:
+  = link_to("@shamoiseva", "https://twitter.com/shamoiseva")
+%p
+  Telegram:
+  = link_to("Shamoi", "https://telegram.me/Shamoi")
+%p
+  Github:
+  = link_to("Shamoi", "https://github.com/Shamoi")
+%p
+  ВКонтакте:
+  = link_to("@shamoiseva", "https://vk.com/shamoiseva")
