--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
     = render 'layouts/html_shim'
   %body
     = render 'layouts/header'
+    = render 'layouts/flash'
     %main
       = yield
     = render 'layouts/footer'
