Add admin link to footer

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,6 +1,7 @@
 %footer
   = link_to("Главная", root_path)
   = link_to("Связаться со мной", contact_path)
+  = link_to("Админка", admin_path)
   - if admin?
     = render 'layouts/admin_footer'
   %span.made-with-love
