--- a/app/views/services/edit.html.haml
+++ b/app/views/services/edit.html.haml
@@ -1,2 +1,15 @@
-%h1 Services#edit
-%p Find me in app/views/services/edit.html.haml
+%h2 Редактировать сервис
+= form_for(@service) do |f|
+  = f.label :name
+  = f.text_field :name
+
+  = f.label :description
+  = f.text_field :description
+
+  = f.label :link
+  = f.text_field :link
+
+  = f.label :admin_link
+  = f.text_field :admin_link
+
+  = f.submit "Сохранить изменения"
