Add link for edit to show action of services controller

--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -6,3 +6,4 @@
 %p
   URL для админки:
   = link_to(@service.admin_link, @service.admin_link)
+= link_to("Редактировать", edit_service_path(@service))
