--- a/app/views/home_page/home.html.haml
+++ b/app/views/home_page/home.html.haml
@@ -23,7 +23,7 @@
       Я программист.
 
 %nav.services
-  %h2 Меню
+  %h2 Нафигация
   - @services.each do |service|
     .service
       .service-name
