--- a/app/views/services/edit.html.haml
+++ b/app/views/services/edit.html.haml
@@ -1,3 +1,4 @@
+- provide(:title, "Редактирование сервиса")
 %h2 Редактировать сервис
 = form_for(@service) do |f|
   = f.label :name, "Название сервиса"
