Edit story about me in home_page

--- a/app/views/home_page/home.html.haml
+++ b/app/views/home_page/home.html.haml
@@ -3,6 +3,8 @@
   .about
     %h2 Кто я такой?
     %p
+      Меня зовут Сева.
+    %p
       Я родился в г. Ижевске, через несколько месяцев переехал в Воткинск
       (Удмуртская республика), в котором на данный момент проживаю. Хочу
       когда-нибудь переехать в Сан-Франциско, работать в стартапе.
