--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,22 @@
+/*
+*= require_tree .
+*= require_self
+*/
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+header {
+  text-align: center;
+  p {
+    font-size: 125%;
+  }
+}
+
+footer {
+  text-align: center;
+  padding-top: 2%;
+  a {
+    font-size: 110%;
+    margin: 0.5%;
+  }
+}
