--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the HomePage controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+main {
+  text-align: center;
+  .content .about {
+    p {
+      font-size: 110%;
+      max-width: 50%;
+      margin: 1% auto;
+    }
+  }
+  nav .service {
+    .service-name {
+      
+    }
+    .service-description {
+
+    }
+  }
+}
