Moved input-group style to application controller

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,11 @@ footer {
     margin: 0.5%;
   }
 }
+
+.input-group {
+  margin: 0 auto;
+  input {
+    text-align: center;
+    margin-top: 5%;
+  }
+}
