--- a/app/views/services/edit.html.haml
+++ b/app/views/services/edit.html.haml
@@ -1,16 +1,9 @@
 - provide(:title, "Редактирование сервиса")
 %h2 Редактировать сервис
-= form_for(@service) do |f|
-  = f.label :name, "Название сервиса"
-  = f.text_field :name
-
-  = f.label :description, "Описание сервиса"
-  = f.text_field :description
-
-  = f.label :link, "Ссылка на сервис"
-  = f.text_field :link
-
-  = f.label :admin_link, "Ссылка на админку сервиса"
-  = f.text_field :admin_link
-
-  = f.submit "Сохранить изменения"
+.input-group.input-group-lg
+  = form_for(@service) do |f|
+    = f.text_field :name, placeholder: "Название сервиса", class: "form-control"
+    = f.text_field :description, placeholder: "Описание сервиса", class: "form-control"
+    = f.text_field :link, placeholder: "Ссылка на сервис", class: "form-control"
+    = f.text_field :admin_link, placeholder: "Ссылка на админку сервиса", class: "form-control"
+    = f.submit "Сохранить изменения", class: "form-control"
