Add link to delete service to edit service view

--- a/app/views/services/edit.html.haml
+++ b/app/views/services/edit.html.haml
@@ -1,3 +1,4 @@
 - provide(:title, "Редактирование сервиса")
 %h2 Редактировать сервис
+= link_to "Удалить сервис", service_path, method: :delete
 = render('service_form')
