--- a/app/assets/stylesheets/admins.scss
+++ b/app/assets/stylesheets/admins.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Admin controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.admins {
+  article.admin {
+    margin: 0.5%;
+    .admin-name {
+      font-size: 120%;
+    }
+  }
+  .new-admin-link {
+    font-size: 130%;
+  }
+}
