--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -3,5 +3,6 @@
 - @articles.each do |article|
   %article
     = link_to(article.title, article)
+    %br
     - if admin?
-      = link("Редактировать", edit_article_path(article))
+      = link_to("(редактировать)", edit_article_path(article))
