--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -2,7 +2,10 @@
 %h2 Блог
 - @articles.each do |article|
   %article
-    = link_to(article.title, article)
+    %h3
+      = link_to(article.title, article)
+    %p
+      = article.description
     %br
     - if admin?
       = link_to("(редактировать)", edit_article_path(article))
