Unescape description in index article action

--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -5,7 +5,7 @@
     %h3
       = link_to(article.title, article)
     %p
-      = article.description
+      != article.description
     %br
     - if admin?
       (
