--- a/app/views/journals/_journal_form.html.haml
+++ b/app/views/journals/_journal_form.html.haml
@@ -1,5 +1,5 @@
 .input-group.input-group-lg
   = form_for(@journal) do |f|
-    = f.text_field :title, placeholder: "Название", class: "form-control"
-    = f.text_area :title, placeholder: "Описание", class: "form-control"
+    = f.text_field :name, placeholder: "Название", class: "form-control"
+    = f.text_area :description, placeholder: "Описание", class: "form-control"
     = f.submit "Сохранить изменения", class: "form-control"
