Add new action to journals controller

--- a/app/views/journals/new.html.haml
+++ b/app/views/journals/new.html.haml
@@ -1,2 +1,3 @@
-%h1 Journals#new
-%p Find me in app/views/journals/new.html.haml
+- provide(:title, "Новый дневник")
+%h2 Новый дневник
+= render('journal_form')
