Add links for edit and delete journals

--- a/app/views/journals/index.html.haml
+++ b/app/views/journals/index.html.haml
@@ -5,3 +5,8 @@
     = journal.name
   %p
     = journal.description
+  - if admin?
+    (
+    = link_to("Удалить", journal, method: :delete)
+    \/
+    = link_to("Редактировать", edit_journal_path(journal))
