Add link to create new journal to index journal action

--- a/app/views/journals/index.html.haml
+++ b/app/views/journals/index.html.haml
@@ -1,5 +1,6 @@
 - provide(:title, "Список дневников")
 %h2 Список дневников
+= link_to("Создать новый дневник", new_journal_path)
 - @journals.each do |journal|
   %h3
     = journal.name
