Add view for edit journal action

--- a/app/views/journals/edit.html.haml
+++ b/app/views/journals/edit.html.haml
@@ -1,2 +1,3 @@
-%h1 Journals#edit
-%p Find me in app/views/journals/edit.html.haml
+- provide(:title, "Редактировать дневник")
+%h2 Редактирование дневника
+= render('journal_form')
