Add link to journals in admin menu

--- a/app/views/layouts/_admin_footer.html.haml
+++ b/app/views/layouts/_admin_footer.html.haml
@@ -1,3 +1,4 @@
 = link_to("Сервисы", services_path)
 = link_to("Администраторы", admins_path)
+= link_to("Дневники", journals_path)
 = link_to("Выйти", logout_path)
