--- a/app/views/articles/_article_form.html.haml
+++ b/app/views/articles/_article_form.html.haml
@@ -2,5 +2,5 @@
   = form_for(@article) do |f|
     = f.text_field :title, placeholder: "Заголовок", class: "form-control"
     = f.text_area :description, placeholder: "Описание статьи", class: "form-control"
-    = f.text_area :text, placeholder: "Текст", class: "form-control"
+    = f.text_area :text, placeholder: "Текст", class: "form-control", rows: 50
     = f.submit "Сохранить изменения", class: "form-control"
