Generate html from post text markdown

--- a/app/views/journals/show.html.haml
+++ b/app/views/journals/show.html.haml
@@ -10,6 +10,6 @@
       %i
         = post.time
     .text
-      = post.text
+      != post.text
     .image
       image_tag(post.photo) - skip it for dev
