--- a/app/views/journals/show.html.haml
+++ b/app/views/journals/show.html.haml
@@ -12,4 +12,4 @@
     .text
       != post.text
     .image
-      image_tag(post.photo) - skip it for dev
+      = link_to(image_tag(post.image.url), post.image.url)
