--- a/app/views/journals/show.html.haml
+++ b/app/views/journals/show.html.haml
@@ -12,4 +12,5 @@
     .text
       != post.text
     .image
-      = link_to(image_tag(post.image.url), post.image.url)
+      - if post.image_file_size
+        = image_tag(post.image.url)
