Add navigation to application layout

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,8 @@
   %body
     %header
       = render 'layouts/header'
+    %aside
+      = render 'layouts/navigation'
     %main
       = yield
     %footer
