Fix layout of header

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,2 +1,5 @@
-%h1= 'Сева Жидков'
-%p= 'Люблю программирование и себя'
+.page-header
+  %h1
+    Сева Жидков
+    %small
+      Люблю программирование и себя
