Generate portfolio controller

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -2,4 +2,6 @@
   %li{role: 'presentation'}
     = link_to 'Главная', home_path
   %li{role: 'presentation'}
+    = link_to 'Портфолио', portfolio_path
+  %li{role: 'presentation'}
     = link_to 'Контакты', contact_path
