Rename portfolio links to projects

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -2,6 +2,6 @@
   %li{role: 'presentation'}
     = link_to 'Главная', home_path
   %li{role: 'presentation'}
-    = link_to 'Портфолио', portfolio_index_path
+    = link_to 'Портфолио', projects_path
   %li{role: 'presentation'}
     = link_to 'Контакты', contact_path
