--- a/app/views/portfolio/index.html.haml
+++ b/app/views/portfolio/index.html.haml
@@ -1,3 +1,4 @@
 - @projects.each do |project|
-  = link_to project.name, project
-  != project.short_description
+  %article
+    = link_to project.name, project
+    != project.short_description
