--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,7 +35,7 @@
         <h4>My name is <b>Seva</b>.</h4>
         <p>School student from Russia. I use Python, Node.js, sometimes Golang. Love open source.</p>
         <aside>
-          <a>Places</a> </br>
+          <a href='/places'>Places</a> </br>
           <a>Friends graph</a> </br>
           <a>Contact me</a>
         </aside>
