Change my description

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,7 +33,7 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>My name is <b>Seva</b>.</h4>
-        <p>School student from Russia. I use Python, Node.js, sometimes Golang. Love open source.</p>
+        <p>School student from Russia, Python developer.</p>
         <aside>
           <a href='/places'>Places</a> </br>
           <a>Friends graph</a> </br>
