--- a/app/templates/apps/word-count.html
+++ b/app/templates/apps/word-count.html
@@ -5,8 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Seva Zhidkov</title>
-  <meta name="description" content="Yet another developer's about me site">
+  <title>Top words that I use in VK</title>
   <!-- Вы не поверите, но -->
   <meta name="author" content="Seva Zhidkov">
 
@@ -32,13 +31,22 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>My name is <b>Seva</b>.</h4>
-        <p>School student from Russia, Python developer.</p>
-        <aside>
-          <a href='/places'>Places</a> </br>
-          <a href='/word-count'>Top words</a> </br>
-          <a>Contact me</a>
-        </aside>
+        <h4>My top words</h4>
+        <ul>
+          {% for word in words %}
+          <li>"{{ word[0] }}" - {{ word[1] }}</li>
+          {% endfor %}
+        </ul>
+        <p>Updated: {{ words_update }} hours ago</p>
+      </div>
+      <div class="one-half column" style="margin-top: 25%">
+        <h4>My top symbols</h4>
+        <ul>
+          {% for symbol in symbols %}
+          <li>"{{ symbol[0] }}" - {{ symbol[1] }}</li>
+          {% endfor %}
+        </ul>
+        <p>Updated: {{ symbols_update }} hours ago</p>
       </div>
     </div>
   </div>
