--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,13 +32,21 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>My name is <b>Seva</b>.</h4>
+        <h4>My name is <b>Seva</b></h4>
         <p>School student from Russia, Python developer.</p>
         <aside>
           <a href='/places'>Places</a> </br>
           <a href='/word-count'>Top words</a> </br>
           <a>Contact me</a>
         </aside>
+      </div>
+      <div class="one-half column" style="margin-top: 25%">
+        <h4>Last activity in <b>Github</b></h4>
+        <ul>
+          {% for contribution in contributions %}
+            <li>{{ contribution }}</li>
+          {% endfor %}
+        </ul>
       </div>
     </div>
   </div>
