Add github widget to index page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -44,7 +44,7 @@
         <h4>Last activity in <b>Github</b></h4>
         <ul>
           {% for contribution in contributions %}
-            <li>{{ contribution }}</li>
+            <li>{{ contribution|safe }}</li>
           {% endfor %}
         </ul>
       </div>
