Update twitter widget in main page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -51,10 +51,8 @@
     </div>
     <div class="row">
       <div class="one-half column" style="margin-top: 0%">
-        <h4>Last post in <b>Twitter</b></h4>
-        <p lang="en" dir="ltr">Creating personal site on Flask. It&#39;s awesome: light, fast and extendable. Highly recommended.</p>&mdash; Seva Zhidkov (@sevazhidkov) <a href="https://twitter.com/sevazhidkov/status/685075517784113152">January 7, 2016</a>
-      </div>
-    </div>
+        <h4>Last posts in <b>Twitter</b></h4>
+<a class="twitter-timeline" href="https://twitter.com/sevazhidkov" data-widget-id="685535455870320643">Tweets by @sevazhidkov</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>    </div>
   </div>
 
 <!-- End Document
