--- a/apps/blog/templates/blog/post_detail.html
+++ b/apps/blog/templates/blog/post_detail.html
@@ -83,6 +83,9 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
           {{ post.text|safe }}
+          {% if content != '' %}
+            {{ post.content|safe }}
+          {% endif %}
         </div>
       </div>
     </div>
