--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags always come first -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+    <title>Seva Zhidkov – personal site</title>
   </head>
   <body>
-    <h1>Seva Zhidkov</h1>
-    <p>Shit</p>
-    <!-- jQuery first, then Bootstrap JS. -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+    <b>Seva Zhidkov</b>
+    <p>Python developer. School student. Bots evangelist.</p>
+    <hr>
+    <p>&copy; 2015, Seva Zhidkov</p>
+    <p><i>Site looks like I follow <a href='http://motherfuckingwebsite.com'>Motherf**king Website concept</a>.
+      Actually i do not. Right now I haven't enough time to make a cool design and I don't want to make
+      another <a href="http://adventurega.me/bootstrap/">Every F**king Bootstrap Website Ever</i></a>.
+    </p>
   </body>
 </html>
